[gd_scene load_steps=13 format=2]

[ext_resource path="res://Images/ICONES_DE_JOGABILIDADE/BUTTON_PLUS_NORMAL.png" type="Texture" id=1]
[ext_resource path="res://Images/ICONES_DE_JOGABILIDADE/BUTTON_PLUS_PRESSED.png" type="Texture" id=2]
[ext_resource path="res://Images/ICONES_DE_JOGABILIDADE/APENAS-O-SIFRAO.png" type="Texture" id=3]
[ext_resource path="res://Images/ICONES_DE_JOGABILIDADE/DIAMOND.png" type="Texture" id=4]
[ext_resource path="res://Scripts/WORKERS_SHOP.gd" type="Script" id=5]
[ext_resource path="res://Images/ICONES_DE_JOGABILIDADE/X.png" type="Texture" id=6]
[ext_resource path="res://Images/ICONES_DE_JOGABILIDADE/X-PRESSED.png" type="Texture" id=7]

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.196078, 0.133333, 0.133333, 1 )
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.294118, 0.286275, 0.101961, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0.0784314, 0.0784314, 0.00392157, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.498039, 0.482353, 0.109804, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0.0784314, 0.0784314, 0.00392157, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.0705882, 0.305882, 0.32549, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0.00784314, 0.027451, 0.105882, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.0509804, 0.47451, 0.501961, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0.00784314, 0.027451, 0.105882, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[node name="WORKERS" type="Node2D"]
script = ExtResource( 5 )

[node name="WORKERS" type="ColorRect" parent="."]
margin_top = 320.0
margin_right = 414.0
margin_bottom = 464.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.0705882, 0.0470588, 0.00392157, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="WORKERS"]
margin_left = 6.0
margin_top = 8.0
margin_right = 408.0
margin_bottom = 136.0
columns = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ADD_WORKER" type="TextureButton" parent="WORKERS/GridContainer"]
margin_left = 8.0
margin_top = 22.0
margin_right = 88.0
margin_bottom = 102.0
rect_min_size = Vector2( 80, 80 )
size_flags_horizontal = 6
size_flags_vertical = 6
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 2 )
expand = true

[node name="TextureRect" type="TextureRect" parent="WORKERS/GridContainer"]
visible = false
margin_left = 8.0
margin_top = 84.0
margin_right = 88.0
margin_bottom = 164.0
rect_min_size = Vector2( 80, 80 )
size_flags_horizontal = 6
size_flags_vertical = 6
expand = true

[node name="ADD_WORKER2" type="TextureButton" parent="WORKERS/GridContainer"]
margin_left = 109.0
margin_top = 22.0
margin_right = 189.0
margin_bottom = 102.0
rect_min_size = Vector2( 80, 80 )
size_flags_horizontal = 6
size_flags_vertical = 6
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 2 )
expand = true

[node name="TextureRect2" type="TextureRect" parent="WORKERS/GridContainer"]
visible = false
margin_left = 8.0
margin_top = 84.0
margin_right = 88.0
margin_bottom = 164.0
rect_min_size = Vector2( 80, 80 )
size_flags_horizontal = 6
size_flags_vertical = 6
expand = true

[node name="ADD_WORKER3" type="TextureButton" parent="WORKERS/GridContainer"]
margin_left = 210.0
margin_top = 22.0
margin_right = 290.0
margin_bottom = 102.0
rect_min_size = Vector2( 80, 80 )
size_flags_horizontal = 6
size_flags_vertical = 6
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 2 )
expand = true

[node name="TextureRect3" type="TextureRect" parent="WORKERS/GridContainer"]
visible = false
margin_left = 8.0
margin_top = 84.0
margin_right = 88.0
margin_bottom = 164.0
rect_min_size = Vector2( 80, 80 )
size_flags_horizontal = 6
size_flags_vertical = 6
expand = true

[node name="ADD_WORKER4" type="TextureButton" parent="WORKERS/GridContainer"]
margin_left = 311.0
margin_top = 22.0
margin_right = 391.0
margin_bottom = 102.0
rect_min_size = Vector2( 80, 80 )
size_flags_horizontal = 6
size_flags_vertical = 6
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 2 )
expand = true

[node name="TextureRect4" type="TextureRect" parent="WORKERS/GridContainer"]
visible = false
margin_left = 8.0
margin_top = 84.0
margin_right = 88.0
margin_bottom = 164.0
rect_min_size = Vector2( 80, 80 )
size_flags_horizontal = 6
size_flags_vertical = 6
expand = true

[node name="SHOP" type="Node2D" parent="."]
visible = false
z_index = 1

[node name="BG" type="Panel" parent="SHOP"]
margin_left = 8.0
margin_top = 8.0
margin_right = 400.0
margin_bottom = 432.0
custom_styles/panel = SubResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CLOSE" type="TextureButton" parent="SHOP"]
margin_left = 24.0
margin_top = 24.0
margin_right = 44.0
margin_bottom = 44.0
rect_min_size = Vector2( 20, 20 )
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 7 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer2" type="GridContainer" parent="SHOP"]
margin_left = 24.0
margin_top = 48.0
margin_right = 384.0
margin_bottom = 116.0
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="SHOP/GridContainer2"]
margin_right = 178.0
margin_bottom = 68.0
size_flags_horizontal = 7

[node name="GridContainer" type="GridContainer" parent="SHOP/GridContainer2/GridContainer"]
margin_right = 178.0
margin_bottom = 40.0
size_flags_horizontal = 7
columns = 2

[node name="TextureRect" type="TextureRect" parent="SHOP/GridContainer2/GridContainer/GridContainer"]
margin_left = 23.0
margin_right = 63.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
size_flags_horizontal = 6
texture = ExtResource( 3 )
expand = true

[node name="PRICE" type="Label" parent="SHOP/GridContainer2/GridContainer/GridContainer"]
margin_left = 91.0
margin_top = 13.0
margin_right = 178.0
margin_bottom = 27.0
size_flags_horizontal = 7

[node name="REFRESH_WITH_GOLD" type="Button" parent="SHOP/GridContainer2/GridContainer"]
margin_top = 44.0
margin_right = 178.0
margin_bottom = 68.0
size_flags_horizontal = 7
custom_styles/pressed = SubResource( 1 )
custom_styles/normal = SubResource( 2 )
text = "REFRESH"

[node name="GridContainer2" type="GridContainer" parent="SHOP/GridContainer2"]
margin_left = 182.0
margin_right = 360.0
margin_bottom = 68.0
size_flags_horizontal = 7

[node name="GridContainer" type="GridContainer" parent="SHOP/GridContainer2/GridContainer2"]
margin_right = 178.0
margin_bottom = 40.0
size_flags_horizontal = 7
columns = 2

[node name="TextureRect" type="TextureRect" parent="SHOP/GridContainer2/GridContainer2/GridContainer"]
margin_left = 23.0
margin_right = 63.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
size_flags_horizontal = 6
size_flags_vertical = 0
texture = ExtResource( 4 )
expand = true

[node name="PRICE" type="Label" parent="SHOP/GridContainer2/GridContainer2/GridContainer"]
margin_left = 91.0
margin_top = 13.0
margin_right = 178.0
margin_bottom = 27.0
size_flags_horizontal = 7
text = "1"

[node name="REFRESH_WITH_DIAMONDS" type="Button" parent="SHOP/GridContainer2/GridContainer2"]
margin_top = 44.0
margin_right = 178.0
margin_bottom = 68.0
size_flags_horizontal = 7
custom_styles/pressed = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
text = "REFRESH"

[node name="GridContainer" type="ScrollContainer" parent="SHOP"]
margin_left = 24.0
margin_top = 120.0
margin_right = 384.0
margin_bottom = 416.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="SHOP/GridContainer"]
margin_right = 360.0
margin_bottom = 296.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="GridContainer" type="GridContainer" parent="SHOP/GridContainer/VBoxContainer"]
margin_right = 360.0
margin_bottom = 296.0
size_flags_horizontal = 3
size_flags_vertical = 3

[connection signal="button_up" from="WORKERS/GridContainer/ADD_WORKER" to="." method="_on_ADD_WORKER_button_up"]
[connection signal="button_up" from="WORKERS/GridContainer/ADD_WORKER2" to="." method="_on_ADD_WORKER2_button_up"]
[connection signal="button_up" from="WORKERS/GridContainer/ADD_WORKER3" to="." method="_on_ADD_WORKER3_button_up"]
[connection signal="button_up" from="WORKERS/GridContainer/ADD_WORKER4" to="." method="_on_ADD_WORKER4_button_up"]
[connection signal="button_up" from="SHOP/CLOSE" to="." method="_on_CLOSE_button_up"]
[connection signal="button_up" from="SHOP/GridContainer2/GridContainer/REFRESH_WITH_GOLD" to="." method="_on_REFRESH_WITH_GOLD_button_up"]
[connection signal="button_up" from="SHOP/GridContainer2/GridContainer2/REFRESH_WITH_DIAMONDS" to="." method="_on_REFRESH_WITH_DIAMONDS_button_up"]
